--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,7 @@ ul {
 }
 
 .button {
+    cursor: pointer;
     font-family: Roboto;
     font-weight: 500;
     font-size: 16px;
@@ -109,11 +110,11 @@ ul {
     background-color: #404BBF;
 }
 
-.section01 {
+.section-features {
     background-color: #FFFFFF;
 }
 
-.section01-head {
+.section-features-head {
     font-family: Roboto;
     font-weight: 500;
     font-size: 20px;
@@ -122,7 +123,7 @@ ul {
     color: #2E2F42;
 }
 
-.section01-text {
+.section-features-text {
     font-family: Roboto;
     font-weight: 400;
     font-size: 16px;
@@ -135,7 +136,7 @@ ul {
     background-color: #F4F4FD;
 }
 
-.team-head {
+.team-prime-head {
      font-family: Roboto;
     font-weight: 700;
     font-size: 36px;
@@ -149,7 +150,7 @@ ul {
     background-color: #FFFFFF;
 }
 
-.team-head3 {
+.team-head {
     font-family: Roboto;
     font-weight: 500;
     font-size: 20px;
@@ -173,7 +174,7 @@ ul {
     background-color: #FFFFFF;
 }
 
-.port-head {
+.port-prime-head {
     font-family: Roboto;
     font-weight: 700;
     font-size: 36px;
@@ -183,7 +184,7 @@ ul {
     color: #2E2F42;
 }
 
-.port-head3 {
+.port-head {
     font-family: Roboto;
     font-weight: 500;
     font-size: 20px;
@@ -210,7 +211,7 @@ ul {
     font-family: Raleway;
     font-weight: 700;
     font-size: 18px;
-    line-height: 1.16;
+    line-height: 1.166;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #F4F4FD;
